Header: Attempt to fix weird overflow (fix for FRO-69).

--- a/apps/web/src/components/Header/header.module.scss
+++ b/apps/web/src/components/Header/header.module.scss
@@ -11,7 +11,7 @@
         150ms ease-in-out box-shadow,
         150ms ease-in-out border-color;
 
-    @media (min-width: $breakpoint-tablet) {
+    @media (min-width: $breakpoint-tablet-medium) {
         border-bottom-width: calc(var(--block-border-width) / 2);
     }
 }
@@ -26,13 +26,12 @@
 
 .content {
     --header-height: 7rem;
-    @media (min-width: $breakpoint-tablet) {
+    @media (min-width: $breakpoint-tablet-medium) {
         --header-height: 6.5rem;
     }
 
     display: grid;
     grid-template-columns: 1fr auto 1fr;
-    //grid-template-columns: 5rem auto 1fr;
     justify-content: space-between;
     align-items: center;
     gap: var(--block-spacer);
@@ -43,9 +42,8 @@
     margin: 0 auto;
     user-select: none;
 
-    @media (min-width: $breakpoint-tablet) {
+    @media (min-width: $breakpoint-tablet-medium) {
         padding: 0 var(--block-spacer-large);
-        //grid-template-columns: 12rem 1fr auto;
         grid-template-columns: 1fr auto 1fr;
         gap: var(--block-spacer-large);
     }
@@ -64,7 +62,6 @@
             padding: var(--block-padding-small) var(--block-padding);
             background-color: var(--accent-primary);
             border-radius: var(--block-border-radius);
-            //mix-blend-mode: difference;
         }
 
         a {
@@ -78,19 +75,16 @@
             border-radius: var(--block-border-radius);
             transition: 150ms ease-in-out background-color;
 
-            @media (min-width: $breakpoint-tablet) {
+            @media (min-width: $breakpoint-tablet-medium) {
                 &:is(:hover, :focus, :focus-within) {
                     background-color: var(--accent-secondary);
                     outline: none;
                 }
             }
 
-            @media (min-width: $breakpoint-tablet) {
+            @media (min-width: $breakpoint-tablet-medium) {
                 height: 4rem;
                 transform: translateX(calc(calc(var(--block-padding) - 0.25rem) * -1));
-                //transform-origin: left;
-                //transform: perspective(10rem)
-                //    translate3d(calc(calc(var(--block-padding) - 0.25rem) * -1), 0px, -3.75rem);
             }
 
             img {
@@ -120,7 +114,7 @@
 
         pointer-events: none;
 
-        @media (min-width: $breakpoint-tablet) {
+        @media (min-width: $breakpoint-tablet-medium) {
             right: calc(var(--block-spacer-small) * -0.5);
             top: calc(var(--block-spacer-small) * -0.5);
         }
@@ -132,7 +126,7 @@
         align-items: center;
         gap: 0;
 
-        @media (min-width: $breakpoint-tablet) {
+        @media (min-width: $breakpoint-tablet-medium) {
             gap: calc(var(--block-spacer) * 2);
         }
 
@@ -164,7 +158,7 @@
             font-weight: 600;
             font-size: 3rem;
 
-            @media (min-width: $breakpoint-tablet) {
+            @media (min-width: $breakpoint-tablet-medium) {
                 aspect-ratio: unset;
                 font-size: 2.5rem;
             }
